# fast-n-furious-cpu

./: Cargo.toml  README.md  build-asm.zsh  build.rs  dependency-chain.asm  dependency-chain.zsh  load-store-ports.asm  load-store-ports.zsh  load.lldb  run.zsh
src/: dependency_chain.rs  load_store_ports.rs  main.rs  perf_metrics.rs  repetition_tester.rs
